now the snakes movement is fine and its no longer a dot its a snake, but selfCollisons have issues